--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <link rel="preload" as="image" href="assets/img/banner3.png" type="image/webp" />
+  <link rel="preload" as="image" href="assets/img/banner3.webp" type="image/webp" />
   <link href="https://fonts.gstatic.com" rel="dns-prefetch preconnect" crossorigin />
   <title>JNEPURPLE: Daftar Togel Toto Online Resmi Terpercaya Hari Ini</title>
   <meta name="description" content="Togel online adalah permainan tebak angka yang sangat populer di Indonesia yang bisa dimainkan dari bandar JNEPURPLE terpercaya. Tersedia semua pasaran togel hari ini terlengkap seperti singapore, hongkong, sydney dan lain sebagainya." />
@@ -31,7 +31,7 @@
   <meta property="og:site_name" content="JNEPURPLE: Daftar Togel Toto Online Resmi Terpercaya Hari Ini" />
   <meta property="og:image:width" content="1920" />
   <meta property="og:image:height" content="960" />
-  <meta property="og:image" content="assets/img/banner3.png" />
+  <meta property="og:image" content="assets/img/banner3.webp" />
   <meta property="og:image:type" content="image/webp" />
   <meta property="og:image:alt" content="JNEPURPLE" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -86,7 +86,7 @@
   </div>
   <div class="banner_section">
 
-    <amp-img data-hero src="assets/img/banner3.png" title="JNEPURPLE: Daftar Togel Toto Online Resmi Terpercaya Hari Ini" layout="responsive" width="840" height="473" alt="JNEPURPLE"></amp-img>
+    <amp-img data-hero src="assets/img/banner3.webp" title="JNEPURPLE: Daftar Togel Toto Online Resmi Terpercaya Hari Ini" layout="responsive" width="840" height="473" alt="JNEPURPLE"></amp-img>
 
   </div>
   <div class="container">
@@ -142,7 +142,7 @@
   <div class="container">
   </div>
   <div class="table container">
-    <amp-img src="assets/img/504138833_gif-online-jne.gif" alt="Bandar Togel Online resmi dan terpercaya" width="1000" height="80" layout="responsive"></amp-img>
+    <amp-img src="assets/img/504138833_gif-online-jne.webp" alt="Bandar Togel Online resmi dan terpercaya" width="1000" height="80" layout="responsive"></amp-img>
     <table class="informasi" style="width:100%">
       <thead>
         <tr>
